--- a/index.html
+++ b/index.html
@@ -37,14 +37,22 @@
             <img src="img/sedona-city.jpg" width="800" height="256">
           </div>
 
-          <h3>жильё</h3>
-          <p>рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <ul class="cards">
+            <li class="housing">
+              <h3>жильё</h3>
+              <p>рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
 
-          <h3>еда</h3>
-          <p>всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <li class="food">
+              <h3>еда</h3>
+              <p>всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
 
-          <h3>сувениры</h3>
-          <p>не только китайского, но и местного производства!</p>
+            <li class="souvenirs">
+              <h3>сувениры</h3>
+              <p>не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
 
           <div class="reason-two">
             <h2>там есть мост дьявола</h2>
