--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <section class="reasons">
           <div class="reason-one">
-            <div class="reason-text">
+            <div class="reason-text number-reason">
               <h2>настоящий городок</h2>
               <p>&ndash; №1 &ndash;</p>
               <p>седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
@@ -55,22 +55,31 @@
           </ul>
 
           <div class="reason-two">
-            <h2>там есть мост дьявола</h2>
-            <p>&ndash; №2 &ndash;</p>
-            <p>да, по нему можно пройти! если конечно вы осмелитесь</p>
+            <img src="img/diablo-bridge.jpg" width="800" height="256">
+            <div class="reason-text number-reason">
+              <h2>там есть мост дьявола</h2>
+              <p>&ndash; №2 &ndash;</p>
+              <p>да, по нему можно пройти! если конечно вы осмелитесь</p>
+            </div>
           </div>
 
-          <h2>небольшая площадь</h2>
-          <p>&ndash; №3 &ndash;</p>
-          <p>все достопримечательности находятся очень близко</p>
-
-          <h2>красивая дорога</h2>
-          <p>&ndash; №4 &ndash;</p>
-          <p>ехать в седону из лас-вегаса совсем не скучно!</p>
-          <h3>мало туристов</h3>
-
-          <p>&ndash; №5 &ndash;</p>
-          <p>большинство едет в гранд каньон и толпится там</p>
+          <ul class="more-reasons-list">
+            <li class="more-reasons-item number-reason">
+              <h2>небольшая площадь</h2>
+              <p>&ndash; №3 &ndash;</p>
+              <p>все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="more-reasons-item number-reason">
+              <h2>красивая дорога</h2>
+              <p>&ndash; №4 &ndash;</p>
+              <p>ехать в седону из лас-вегаса совсем не скучно!</p>
+            </li>
+            <li class="more-reasons-item number-reason">
+              <h2>мало туристов</h2>
+              <p>&ndash; №5 &ndash;</p>
+              <p>большинство едет в гранд каньон и толпится там</p>
+            </li>
+          </ul>
         </section>
 
         <h2>заинтересовались?</h2>
